# FalconTransfer

./: .gitignore  Cargo.toml  LOGGING_STANDARD.md  README.md  requirements_prompt.md
.claude/: instructions.md
config/: Cargo.toml
config/src/: lib.rs
config/tests/: config_integration.rs
discovery/: Cargo.toml
discovery/examples/: demo.rs
discovery/src/: announce.rs  client.rs  iface.rs  lib.rs  listen.rs  neighbors.rs  server.rs
filesystem/: Cargo.toml
filesystem/benches/: buffer_bench.rs  buffer_sizing.rs
filesystem/fuzz/: Cargo.toml  run_all.sh
filesystem/fuzz/fuzz_targets/: fuzz_buffer.rs  fuzz_randfile.rs  fuzz_seqfile.rs  fuzz_vectored_buffer.rs
filesystem/src/: buffer.rs  buffered_file.rs  lib.rs  mime.rs  safe_filename.rs
identity/: Cargo.toml
identity/src/: lib.rs  peer.rs  task.rs
native_port/: Cargo.toml
native_port/src/: command.rs  main.rs  port.rs  task_info.rs  watchers.rs
persist/: Cargo.toml
persist/src/: lib.rs  registry.rs  store.rs  stream_map.rs
task_composer/: Cargo.toml
task_composer/benches/: split_bench.rs
task_composer/examples/: demo.rs  persist_demo.rs  status_display.rs
task_composer/src/: http.rs  lib.rs  utils.rs
task_composer/src/http/: command.rs  composer.rs  controller.rs  dispatcher.rs  file_cursor.rs  file_range.rs  header_map_ext.rs  meta.rs  persist.rs  qos.rs  status.rs  task.rs  worker.rs
task_composer/src/utils/: rate_limiter.rs  safe_filename.rs
