[package]
name = "falcon_native_port"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = "1.0.145"
compio = { workspace = true }
see = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
flume = { workspace = true }
async-broadcast = { workspace = true }
url = { workspace = true }
async-lock = { workspace = true }
tracing-panic = { workspace = true }

falcon_identity = { path = "../identity" }
falcon_task_composer = { path = "../task_composer" }
