[package]
name = "falcon_native_port"
version = "0.1.0"
edition = "2024"

[dependencies]
async-broadcast = { workspace = true }
compio = { workspace = true }
falcon_identity = { path = "../identity" }
falcon_config = { path = "../config" }
falcon_task_composer = { path = "../task_composer" }
flume = { workspace = true }
futures-util = { workspace = true }
see = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.145"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-panic = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
