[package]
name = "falcon_persist"
version = "0.1.0"
edition = "2024"

[dependencies]
falcon_config = { path = "../config" }
postcard = { version = "1.1.3", features = ["use-std"] }

async-broadcast = { workspace = true }
futures-util = { workspace = true }
fastrand = "2.3.0"
thiserror = { workspace = true }
serde = { workspace = true }
compio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }
redb = { workspace = true }
bitcode = { version = "0.6.9", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
