[package]
name = "task_composer"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
async-broadcast = "0.7.2"
camino = { workspace = true }
compio = { workspace = true }
see = "0.1.1"
cyper = { version = "0.5.0", default-features = false, features = [
  "cookies",
  "http2",
  "http3",
  "nightly",
  # "rustls",
  "native-tls",
  "stream",
] }
fastdate = "0.3.36"
filesystem = { path = "../filesystem" }
flume = { workspace = true }
futures-util = { workspace = true }
governor = "0.10.1"
http = "1.3.1"
identity = { path = "../identity" }
mime = { workspace = true }
multipart_async_stream = "0.2.4"
percent-encoding = "2.3.2"
regex = "1.11.2"
sanitize-filename-reader-friendly = "2.3.0"
smol-cancellation-token = "0.1.1"
sparse_ranges = "0.1.8"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
url = "2.5.7"

[dev-dependencies]
criterion = "0.7.0"
tempfile = { version = "3.23.0", features = ["nightly"] }

# [profile.dev]
# # force-frame-pointers = true

# [profile.release]
# # force-frame-pointers = true
# debug = true
