[package]
name = "falcon_task_composer"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
async-broadcast = { workspace = true }
camino = { workspace = true }
coarsetime = { workspace = true }
compio = { workspace = true }
cyper = { version = "0.7.1", default-features = false, features = [
  "cookies",
  "http2",
  # "http3",
  # "rustls",
  "native-tls",
  "nightly",
  "stream",
] }
falcon_config = { path = "../config" }
falcon_filesystem = { path = "../filesystem" }
falcon_identity = { path = "../identity" }
falcon_persist = { path = "../persist" }
flume = { workspace = true }
futures-util = { workspace = true }
governor = "0.10.1"
http = "1.3.1"
mime = { workspace = true }
multipart_async_stream = "0.2.4"
percent-encoding = "2.3.2"
redb = { workspace = true }
regex = "1.11.2"
see = { workspace = true }
serde = { workspace = true }
smol-cancellation-token = "0.1.1"
sparse_ranges = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
ubyte = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

# [profile.dev]
# # force-frame-pointers = true

# [profile.release]
# # force-frame-pointers = true
# debug = true
